<resources>
    <string name="app_name">WeatherApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to registration -->
    <string name="action_find_coordinates">Find Coordinates</string>
    <string name="register_activity_email">Email</string>
    <string name="register_activity_email_hint">Enter your Email Here...</string>
    <string name="register_activity_password">Password</string>
    <string name="register_activity_password_hint">Enter your Password Here...</string>
    <string name="register_activity_name">Name</string>
    <string name="register_activity_name_hint">Enter your name here...</string>
    <string name="register_activity_coordinate_x">Latitude</string>
    <string name="register_activity_coordinate_y">Longitude</string>
    <string name="register_activity_api_key">OpenWeatherMap API Key</string>
    <!-- Strings related to get weather -->
    <string name="action_sign_out">Sign Out</string>
</resources>
